# torchonometrics

./: .gitignore  LICENSE  README.md  SPEC_DYNAMIC_CHOICE.md  pyproject.toml
.github/workflows/: docs.yml
docs/: README.md  build_api_docs.sh  generate_api_docs.py
nb/: 00_basics.ipynb  RedbusBluebus.ipynb  dynamic_discrete_choice.md  example.ipynb  gmm_example.ipynb  gmm_maximum_likelihood.ipynb  instrument_strength.ipynb  latent_factor_models_for_counterfactual_prediction.qmd  lowranklogit.ipynb  math.md  maximum_likelihood.ipynb  scratch.ipynb
specs/: SPEC_DYNAMIC_CHOICE.md  SPEC_FE_MLE_PORT.md
tests/: __init__.py  conftest.py  test_choice.py  test_dynamic_choice.py  test_grouped_fe.py  test_hotz_miller.py  test_integration.py  test_rust_nfp.py
torchonometrics/: __init__.py  base.py  demean.py  grouped_fe.py  linear.py  mle.py
torchonometrics/choice/: __init__.py  base.py  ccp_estimators.py  dynamic.py  static.py  transitions.py
torchonometrics/gmm/: __init__.py  gel.py  gmm.py
